fixed layout shift by making scrollbar always visible

--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,16 @@
     transform: translateX(0);
   }
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(155, 155, 155, 0.5);
+}
+
+html {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(155, 155, 155, 0.5) transparent;
+}
